--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div>
 
-		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px" width="343" height="333"><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
+		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px" width=4vw height=4vh><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
 
 		</div>
 
