--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+	
+<!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 
 </head>
 <body>
@@ -24,7 +33,7 @@
 		<div class="tagline"> UNDER CONSTRUCTION </div>
 		<p></p>
 
-		<div>
+		<div class="container-fluid">
 
 		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px; max-width:100%;" width=490 height=476><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
 
