--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Dominik Wisniewski</div>
-		<div class="tagline">Software developer | QA - Manual & Automation  </div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
-		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
+		<div class="jumbotron jumbotron-fluid">
+			
+			<div class="intro">Dominik Wisniewski</div>
+			<div class="tagline">Software developer | QA - Manual & Automation  </div>
+			<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+			<div class="icons-social">
+			  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
+			</div>
+			
 		</div>
 		<p></p>
+		
 		<div class="tagline"> UNDER CONSTRUCTION </div>
 		<p></p>
 
