--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 
 </head>
-<body>
+<body height=100%>
 	<main>
 		
 			
@@ -43,6 +43,39 @@
 
 		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px; max-width:100%;" width=490 height=476><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
 
+		</div>
+		
+		<div class="bg-info">
+		  <div class="container">
+		    <div id="carousel-example-vertical" class="carousel vertical slide">
+		      <div class="carousel-inner" role="listbox">
+			<div class="item active">
+			  <p class="ticker-headline">
+			    <a href="#">
+				    <strong>Article Headline 1</strong> qwerty
+			    </a>
+			  </p>
+			</div>
+			<div class="item">
+			  <p class="ticker-headline">
+			    <a href="#">
+			      <strong>Article Headline 5</strong> qwerty
+			    </a>
+			  </p>
+			</div>
+	     		</div>
+
+		      <!-- Controls -->
+		      <a class="up carousel-control" href="#carousel-example-vertical" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		      </a>
+		      <a class="down carousel-control" href="#carousel-example-vertical" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		      </a>
+		    </div>
+		  </div>
 		</div>
 
   
