--- a/index.html
+++ b/index.html
@@ -25,55 +25,57 @@
 <body height=100%>
 	<main>
 		
-			
+	  <div class="section black" id="section_main">	
 		<div class="intro">Dominik Wisniewski</div>
 		<div class="tagline">Software developer | QA - Manual & Automation  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
 		</div>
-			
-		
-		<p></p>
-		
-		<div class="tagline"> UNDER CONSTRUCTION </div>
-		<p></p>
+		<ul class="nav">
+		  <li>About</li>
+		  <li><a href="#section_tech">Tech</a></li>
+		  <li><a href="#section_exp">Experience</a></li>
+		</ul>
 
 		<div class="container-fluid">
 
 		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px; max-width:100%;" width=490 height=476><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
 
 		</div>
-		
+	  </div>
 
-<div class="container-fluid">
-    <div id="carouselExampleControls" class="carousel vert slide" data-ride="carousel" data-interval="9000">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block mx-auto img-fluid" src="//placehold.it/800x400" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block mx-auto img-fluid" src="//placehold.it/800x400/dd4444/fff" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block mx-auto img-fluid" src="//placehold.it/800x400/777" alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
+	<div class="section white" id="section_tech">
+		<h2>Technology</h2>
+		<p>
+		Boli mnie, gdy wyrzucam dodatki z gazety, widząc oczami myśli padające lasy. „Dom” wyrzucam – dąb pada. „Turystykę” – lipa. 
+		„Komunikaty” – świerki jak zimowe kwiaty. „Auto-moto” – jak maszty upadają sosny. 
+		„Supermarket” – to modrzew, klon – „Nieruchomości”. 
+		„Mój Komputer” – i buk się korzeniem nakrywa. A z każdym precz dodatkiem ich żywicą krwawię
+
+		</p>
+		<ul class="nav">
+			<li><a href="#section_main">About</a></li>
+			<li>Tech</li>
+			<li><a href="#section_exp">Experience</a></li>
+		</ul>
+	</div>
+		
+	<div class="section black" id="section_exp">
+		<h2>Section 3</h2>
+		<p>
+		Pół tussicodinu – na kaszel po fajkach. Z krzyżykiem na ból głowy, też po papierosach. 
+		I pół lerivonu – przeciwko czarnym myślom przed snem i depresji i ułatwia zaśnięcie. 
+		I pół imovane – na sen pierwszy. 
+		I do tego pół stilnoksu – aby ten sen podtrzymać. I aspirynę – profilaktycznie. 
+
+		</p>
+		<ul class="nav">
+			<li><a href="#section_main">About</a></li>
+			<li><a href="#section_tech">Tech</a></li>
+			<li>Experience</li>
+		</ul>
+	</div>
 
   
 	</main>
