--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
 		</div>
 
-		<p>Under Construction</p>
+		<p></p>
+		<div class="tagline">Under Construction</div>
+		<p></p>
 		
 		<div class="container-fluid">
 
