--- a/index.html
+++ b/index.html
@@ -24,11 +24,41 @@
 </head>
 <body height=100%>
 	<main>
-		
+	
+	<ul id="menu">
+		<li data-menuanchor="About" class="active"><a href="#About">ABOUT</a></li>
+		<li data-menuanchor="Development"><a href="#Development">DEVELOPMENT>
+		<li data-menuanchor="Software testing"><a href="#Testing">QUALITY ASSURANCE</a></li>
+	</ul>
 
+	<div id="fullpage">
+		<div class="section " id="section0">
+			<div class="intro">
+			<h1>Dominik Wisniewski</h1>
+			<p>Database developer || Software testing</p>
+			</div>
+		</div>
+		<div class="section" id="section1">
+			<div class="intro">
+				<h1>Development</h1>
+				<p>Oracle & SQL Server database software development</p>
+			</div>
+		<div class="icons-social">
+		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
+		</div>
+		</div>
+		<div class="section" id="section2">
+			<div class="intro">
+				<h1>Software testing</h1>
+				<p>Manual & automated software testing</p>
+			</div>
+		</div>
+	</div>
+		
+                <!--
 		<div class="intro">Dominik Wisniewski</div>
 		<div class="tagline">Software developer | QA - Manual & Automation  </div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands 
 		<div class="icons-social">
 		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
 		</div>
@@ -41,7 +71,7 @@
 
 		<video muted playsinline autoplay loop style="margin:0 auto;max-height:700px; max-width:100%;" width=490 height=476><source src="https://g.redditmedia.com/h-UTm72bEF5PXiRaD9SOQ1W1Pa24mavtgTWTPYjdKDE.gif?fm=mp4&amp;mp4-fragmented=false&amp;s=f9489318029be7dcf05871154046aeef"></video>
 
-		</div>
+		</div> -->
 
 
   
