--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 
 	<!-- Latest compiled and minified CSS -->
@@ -25,9 +26,10 @@
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/modernizr.js"></script> 
 
 </head>
-<body height=100%>
+<body data-animation="scaleDown">
 	<main>
 
 	<section class="cd-section visible">
