--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<script src="js/jquery-2.1.4.js"></script>
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/scripts.js"></script>
 	<script src="js/modernizr.js"></script> 
 
 </head>
@@ -35,7 +35,7 @@
 	<section class="cd-section visible">
 		<div>
 			<h1>Dominik Wisniewski</h1>
-			<h2>SOftware development & testing</h2>
+			<h2>Software development & testing</h2>
 		</div>
 		<div class="icons-social">
 		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
