--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 
-	<!-- Latest compiled and minified CSS -->
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	<!-- Latest compiled and minified CSS
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	
-	<!-- JS, Popper.js, jQuery-->
+	<!-- JS, Popper.js, jQuery
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	
+	-->
+	<script src="js/modernizr.js"></script> 
 	
 	<script src="js/jquery-2.1.4.js"></script>
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
 	<script src="js/scripts.js"></script>
-	<script src="js/modernizr.js"></script> 
 
 </head>
 <body data-animation="scaleDown">
-	<main>
+	
 
 	<section class="cd-section visible">
 		<div>
@@ -61,6 +61,7 @@
 			<li><a href="#0" class="cd-next">Prev</a></li>
 		</ul>
 	</nav> <!-- .cd-vertical-nav -->
+
 		
                 <!--
 		<div class="intro">Dominik Wisniewski</div>
@@ -81,7 +82,5 @@
 		</div> -->
 
 
-  
-	</main>
 </body>
 </html>
