--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 
 	<section class="cd-section visible">
 		<div>
-			<h1>Dominik Wisniewski</h1>
+			<h2>Dominik Wisniewski</h2>
 			<h2>Software development & testing</h2>
 		</div>
+		<!--
 		<div class="icons-social">
 		  <a target="_blank" href="https://stackoverflow.com/users/story/6234225"><i class="fab fa-stack-overflow"></i></a>
-		</div>
+		</div>-->
 	</section>
 
 	<section class="cd-section">
