--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 	<section class="cd-section visible">
 		<div>
 			<h2>Dominik Wisniewski</h2>
-			<h3>Software development & testing</h3>
+			<h2>Software dev & testing</h2>
+		</div>
+		<div>
+			<p> test </p>  
+			
 		</div>
 		<!--
 		<div class="icons-social">
