--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -66,9 +66,9 @@
           <div class="subheading mb-5"> ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
-          <p class="lead mb-5">I am a developer specialized in Oracle database technology, having background in software testing of multi-tier systems </p>
+          <p class="lead mb-5"> Hi, Oracle PL/SQL dev here - I take care of OLTP system development, currently for payment card industry </p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/dominik-wisniewski/">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="#">
@@ -94,7 +94,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software developer</h3>
               <div class="subheading mb-3">First Data</div>
-              <p>Development and maintenance of payment instruments issuing system based on Oracle DB.</p>
+              <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2018 - Present</span>
