--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="subheading mb-5"> ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
-          <p class="lead mb-5"> Hi, Oracle PL/SQL dev here - I take care of OLTP system development, currently for payment card industry </p>
+          <p class="lead mb-5"> Hi, Oracle PL/SQL dev here - I take care of OLTP system development</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/dominik-wisniewski/">
               <i class="fab fa-linkedin-in"></i>
@@ -95,9 +95,14 @@
               <h3 class="mb-0">Software developer</h3>
               <div class="subheading mb-3">First Data</div>
               <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
+              Technical responsibilites:
+              - PL/SQL modules and API development
+              - query and process optimization
+              - integration with other applications via Oracle Service Bus
+              - simple frontend development (based on mod pl/sql + html + css + javascript)
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2018 - Present</span>
+              <span class="text-primary">2018/03 - Present</span>
             </div>
           </div>
 
@@ -108,7 +113,7 @@
               <p>Quality assurance for multi-tier systems for payment instruments issuance, management, transaction acceptance and proccessing.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2016 - February 2018</span>
+              <span class="text-primary">2016/09 - 2018/02</span>
             </div>
           </div>
 
