--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
               <div class="subheading mb-3">First Data</div>
               <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
               Technical responsibilites:
-              - PL/SQL modules and API development
-              - query and process optimization
-              - integration with other applications via Oracle Service Bus
-              - simple frontend development (based on mod pl/sql + html + css + javascript)
+              <p>- PL/SQL modules and API development</p>
+              <p>- query and process optimization</p>
+              <li>- integration with other applications via Oracle Service Bus</li>
+              <li>- frontend development (based on mod pl/sql + html + css + javascript)</li>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2018/03 - Present</span>
