--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
               <div class="subheading mb-3">First Data</div>
               <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
               Technical responsibilites:
-              <p>- PL/SQL modules and API development</p>
-              <p>- query and process optimization</p>
-              <li>- integration with other applications via Oracle Service Bus</li>
-              <li>- frontend development (based on mod pl/sql + html + css + javascript)</li>
+              <ul>
+              <li> PL/SQL modules and API development</li>
+              <li> query and process optimization</li>
+              <li> integration with other applications via Oracle Service Bus</li>
+              <li> frontend development (based on mod pl/sql + html + css + javascript)</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2018/03 - Present</span>
