--- a/index.html
+++ b/index.html
@@ -169,11 +169,19 @@
           <h2 class="mb-5">Education</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Polish-Japanese Academy of Information Technology</h3>
-              <div class="subheading mb-3">Post graduate</div>
-              <div>Computer Science - database applications</div>
-              <p>...</p>
+              <div class="subheading mb-3">Post graduate: Information systems, applications and databases</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2017 - February 2018</span>
+            </div>
+          </div>
+            
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Polish-Japanese Academy of Information Technology</h3>
+              <div class="subheading mb-3">Post graduate: Computer Science - database applications </div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2014 - June 2015</span>
@@ -183,8 +191,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Warsaw School of Economics</h3>
-              <div class="subheading mb-3"> Master degree - Economics</div>
-              <p>...</p>
+              <div class="subheading mb-3"> Master degree: Law & Economics</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2011 - June 2013</span>
@@ -201,18 +208,13 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-
+          <ul class="list-inline fa-ul">
+            <li class="list-inline-item"><i class="fa-li fa fa-database">PL/SQL</li>
+            <li class="list-inline-item"><i class="fa-li fa fa-mug-hot"></i>Java</li>
+            <li class="list-inline-item"></li>
           </ul>
+          <br>
+
 
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
