--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline fa-ul">
-            <li class="list-inline-item"><i class="fa-li fa fa-database">PL/SQL</li>
-            <li class="list-inline-item"><i class="fa-li fa fa-mug-hot"></i>Java</li>
-            <li class="list-inline-item"></li>
+          <ul class="fa-ul mb-0">
+            <li><i class="fa-li fa fa-database"></i>PL/SQL</li>
+            <li><i class="fa-li fa fa-mug-hot"></i>Java</li>
+            <li></li>
           </ul>
           <br>
 
