--- a/index.html
+++ b/index.html
@@ -209,9 +209,19 @@
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="fa-ul mb-0">
-            <li><i class="fa-li fa fa-database"></i>PL/SQL</li>
-            <li><i class="fa-li fa fa-mug-hot"></i>Java</li>
-            <li></li>
+            <li><i class="fa-li fa fa-database"></i>PL/SQL - good</li>
+            <li><i class="fa-li fas fas-mug-hot"></i>Java - basic</li>
+          </ul>
+          <br>
+          
+          <div class="subheading mb-3">Tools</div>
+          <ul class="fa-ul mb-0">
+            <li><i class="fa-li fa fa-database"></i>SQL Developer, Toad - good</li>
+            <li><i class="fa-li fas fas-mug-hot"></i>Eclipse - good</li>
+            <li><i class="fa-li fas fas-mug-hot"></i>SoapUI - good</li>
+            
+            <li><i class="fa-li fas fa-tachometer-alt"></i>jMeter - good</li>
+            <li><i class="fa-li fab fa-git-alt"></i>GIT - basic</li>
           </ul>
           <br>
 
