--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
           <div class="subheading mb-3">Tools</div>
           <ul class="fa-ul mb-0">
             <li><i class="fa-li fa fa-database"></i>SQL Developer, Toad - good</li>
-            <li><i class="fa-li fas fas-mug-hot"></i>Eclipse - good</li>
-            <li><i class="fa-li fas fas-mug-hot"></i>SoapUI - good</li>
+            <li><i class="fa-li fas fa-coffee"></i>Eclipse - good</li>
+            <li><i class="fa-li fas fa-coffee"></i>SoapUI - good</li>
             
             <li><i class="fa-li fas fa-tachometer-alt"></i>jMeter - good</li>
             <li><i class="fa-li fab fa-git-alt"></i>GIT - basic</li>
