--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="fa-ul mb-0">
             <li><i class="fa-li fa fa-database"></i>PL/SQL - good</li>
-            <li><i class="fa-li fas fas-mug-hot"></i>Java - basic</li>
+            <li><i class="fa-li fab fa-java"></i>Java - basic</li>
           </ul>
           <br>
           
