--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Warsaw School of Economics</h3>
               <div class="subheading mb-3"> Master degree: Law & Economics</div>
@@ -224,6 +224,33 @@
             <li><i class="fa-li fab fa-git-alt"></i>GIT - basic</li>
           </ul>
           <br>
+          
+          <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col"><i class="fa-li fa fa-database"></i>First</th>
+                  <th scope="col"><i class="fa-li fas fa-coffee"></i>Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <td>Larry</td>
+                  <td>the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+            </table>
 
 
           <div class="subheading mb-3">Workflow</div>
