--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <li><i class="fa-li fas fa-coffee"></i>Eclipse</li>
             <li><i class="fa-li fas fa-coffee"></i>SoapUI</li>
             <li><i class="fa-li fas fa-tachometer-alt"></i>jMeter</li>
-            <li><i class="fa-li fab fa-git-alt"></i>GIT</li>
+            <li><i class="fa-li fas fa-code-branch"></i>GIT</li>
           </ul>
           <br>
         </div>
