--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
             <span class="text-primary">Wisniewski</span>
           </h1>
           <div class="subheading mb-5"> ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:wisniewski.dominik@protonmail.com">wisniewski.dominik@protonmail.com</a>
           </div>
-          <p class="lead mb-5"> Hi, Oracle PL/SQL dev here - I take care of OLTP system development</p>
+          <p class="lead mb-5"> Hi, I'm a guy who develops database software. Somewhere during my mid 20's I got interested in software and decided to give it a go and try database "stuff". Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/dominik-wisniewski/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <!--<a href="#">
               <i class="fab fa-github"></i>
-            </a>
+            </a>-->
             <a href="https://stackoverflow.com/users/story/6234225">
               <i class="fab fa-stack-overflow"></i>
             </a>
@@ -249,7 +249,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p> My permanent interests generally revolve around climbing & mountaineering, but from time to time I tend focus on something new. Lately it has been rafting and growing houseplants :)</p>
-          <p class="mb-0"></p>
+          <p class="mb-0">I also like listening to Joe Rogan Experience podcast</p>
         </div>
       </section>
 
