--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h1 class="mb-0">Dominik
             <span class="text-primary">Wisniewski</span>
           </h1>
-          <div class="subheading mb-5"> ·
+          <div class="subheading mb-5"> 
             <a href="mailto:wisniewski.dominik@protonmail.com">wisniewski.dominik@protonmail.com</a>
           </div>
           <p class="lead mb-5"> Hi, I'm a guy who develops database software. Somewhere during my mid 20's I got interested in software and decided to give it a go and try database "stuff". Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume </p>
