--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <li> minor Java development</li>
               </ul>
               
-              Used tools: SQL Developer, TOAD, Eclipse, GIT, SoapUI, jMeter
+              Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter
               <br><br>
               Business-wise knowledge:
               <ul>
