--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">November 2015 - August 2016</span>
+              <span class="text-primary">2015/11 - 2016/08</span>
             </div>
           </div>
 
@@ -170,7 +170,7 @@
               </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2011 - October 2015</span>
+              <span class="text-primary">2011/07 - 2015/10</span>
             </div>
           </div>
 
