--- a/index.html
+++ b/index.html
@@ -227,17 +227,19 @@
           <ul class="fa-ul mb-0">
             <li><i class="fa-li fa fa-database"></i><b>PL/SQL</b> - good, I work with it daily</li>
             <li><i class="fa-li fab fa-java"></i><b>Java</b> - basic, occasional development of simple functionalities</li>
+            <li><i class="fa-li fab fa-js"></i><b>JavaScript</b> - basic, occasional development of simple functionalities</li>
           </ul>
           <br>
           
           <div class="subheading mb-3">Tools</div>
           <ul class="fa-ul mb-0">
             <li><i class="fa-li fa fa-database"></i><b>SQL Developer, TOAD</b> - daily usage, know most features</b></li>
+            <li><i class="fa-li fa fa-database"></i><b>Oracle Application Express</b> - good, occasional development of desktop apps</b></li>
             <li><i class="fa-li fa fa-database"></i><b>Informatica PC</b> - basic - used for few months, got grip of basic functionalities (read: I'll manage with building ETL process)</li>
             <li><i class="fa-li fas fa-coffee"></i><b>Eclipse</b> - basic - occasional usage for Java development (read: I'll build a java project and make a .jar out of it)</li>
             <li><i class="fa-li fas fa-tachometer-alt"></i><b>SoapUI</b> - basic - regular usage for integration / web-services testing, know most basic features (read: I'll prepare a project for functional and load testing) </li>
             <li><i class="fa-li fas fa-tachometer-alt"></i><b>jMeter</b> - basic - occasional usage for performance testing (read: I'll manage with creation of load tests and measuring performance)  </li>
-        <li><i class="fa-li fas fa-code-branch"></i><b>GIT</b></li>
+        <li><i class="fa-li fas fa-code-branch"></i><b>GIT</b> - daily usage</li>
           </ul>
           <br>
         </div>
