--- a/index.html
+++ b/index.html
@@ -248,6 +248,37 @@
         </div>
       </section>
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="certs">
+        <div class="my-auto">
+          <h2 class="mb-5">Certificates & courses</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Certificates</h3>
+              <div class="subheading mb-3">Oracle Database SQL Certified Associate</div>
+              <div class="subheading mb-3">Oracle PL/SQL Developer Certified Associate</div>
+            </div>
+
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Courses</h3>
+              <div class="subheading mb-3">Oracle SQL - 18c performance tuning </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">October 2019</span>
+            </div>
+           <div class="resume-content mr-auto">
+              <div class="subheading mb-3">Oracle PL/SQL - 18c advanced programming </div>
+           </div>
+           <div class="resume-date text-md-right">
+              <span class="text-primary">October 2019</span>
+           </div>
+
+        </div>
+      </section>
+
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
