--- a/main.html
+++ b/main.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+  
 <head>
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poppins:400,400i,500,700,700i&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="./mini-dark.min.css">
@@ -19,3 +22,4 @@
     </header>
   </div>
 </body>
+</html>
