--- a/main.html
+++ b/main.html
@@ -23,9 +23,7 @@
     </header>
     
     
-    <nav class="col-md-4 col-lg-3" id="nav-drawer">
-    <h3>Menu</h3>
-    <label for="doc-drawer-checkbox" class="button drawer-close"></label>
+    <nav class="col-md-4 col-lg-2" id="nav-menu">
     <a href="#about" id="link-to-about">About</a>
     <a href="#experience" id="link-to-experience">Experience</a>
     <a href="#education" id="link-to-education">Education</a>
