--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
 <title>dominik wisniewski</title>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+  
+<style>
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
+  
 </head>
 <body>
   <div>
@@ -24,7 +32,7 @@
     
     
     <nav class="col-md-4 col-lg-2" id="nav-menu">
-      <img src="img/logo.jpg" alt="">
+    <img class="circular" src="img/logo.jpg" alt="">
     <a href="#about" id="link-to-about">About</a>
     <a href="#experience" id="link-to-experience">Experience</a>
     <a href="#education" id="link-to-education">Education</a>
