--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
       <h3><a href="#experience" id="link-to-experience">Experience</a></h3>
       <h3><a href="#education" id="link-to-education">Education</a></h3>
       <h3><a href="#skills" id="link-to-skills">Skills</a></h3>
-      <h3><a href="#lists" id="link-to-lists">Certificates &amp; & courses</a></h3>
+      <h3><a href="#lists" id="link-to-lists">Certificates &amp; courses</a></h3>
       <h3><a href="#hobby" id="link-to-interests">Interests</a></h3>
     </nav>
     <main>
