--- a/main.html
+++ b/main.html
@@ -41,6 +41,12 @@
       <h3><a href="#hobby" id="link-to-interests">Interests</a></h3>
     </nav>
     <main>
+      <div id="about" class="card fluid">
+        text
+      </div>
+      <div id="experience" class="card fluid">
+        text
+      </div>
     </main>
   </div>
 </body>
