--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
     
-    
+    <div id="wrapper" class="row">
     <nav class="col-md-4 col-lg-2" id="nav-menu">
     <img class="circular" src="img/logo.jpg" alt="">
       <h3><a href="#about" id="link-to-about">About</a></h3>
@@ -40,7 +40,7 @@
       <h3><a href="#lists" id="link-to-lists">Certificates &amp; courses</a></h3>
       <h3><a href="#hobby" id="link-to-interests">Interests</a></h3>
     </nav>
-    <main>
+    <main class="col-sm-12 col-md-8 col-lg-9" id="main-content">
       <div id="about" class="card fluid">
         text
       </div>
@@ -48,6 +48,7 @@
         text
       </div>
     </main>
+    </div>
   </div>
 </body>
 </html>
