--- a/main.html
+++ b/main.html
@@ -42,7 +42,9 @@
     </nav>
     <main class="col-sm-12 col-md-8 col-lg-9" id="main-content">
       <div id="about" class="card fluid">
-        text
+      <p>Hi, I'm a guy who develops database software. 
+        Somewhere during my mid 20's I got interested in software and decided to give it a go and try database "stuff". 
+        Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume</p>
       </div>
       <div id="experience" class="card fluid">
         text
