--- a/main.html
+++ b/main.html
@@ -47,7 +47,20 @@
         Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume</p>
       </div>
       <div id="experience" class="card fluid">
-        text
+      <h2 class="section double-padded">Experience</h2>
+      <div class="section"><p>
+         Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.
+Technical responsibilites:
+    <ul>
+      <li>PL/SQL development (new transactional modules, API, reporting)</li>
+      <li>query and process optimization</li>
+      <li>integration with other applications via Oracle Service Bus</li>
+      <li>frontend development - Apache server with mod pl/sql (basic html/css + javascript)</li>
+      <li>minor Java development</li>
+    </ul>
+
+Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter 
+      </p></div>
       </div>
     </main>
     </div>
