--- a/main.html
+++ b/main.html
@@ -48,7 +48,12 @@
       </div>
       <div id="experience" class="card fluid">
       <h2 class="section double-padded">Experience</h2>
-      <div class="section"><p>
+      <div class="section">
+        
+    <div class="container" style="padding: 0.25rem"><div class="row">
+    <div class="col-sm-12">
+    <div class="card fluid" style="margin: 0.5rem 0.25rem">
+      <h3 class="doc section">FDP</h3>
         <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
         <p>Technical responsibilites:</p>
         <ul>
@@ -59,7 +64,12 @@
           <li>minor Java development</li>
         </ul>
         <p>Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter</p>
-      </p></div>
+      </p>
+    </div>
+    </div>
+    </div>
+    </div>       
+        
       </div>
     </main>
     </div>
