--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
     <div class="container" style="padding: 0.25rem"><div class="row">
     <div class="col-sm-12">
     <div class="card fluid" style="margin: 0.5rem 0.25rem">
-      <h3 class="doc section">FDP</h3>
+      <h3 class="doc section">Software developer<small>First Data Poland (since 2018/03)</small></h3>
         <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
         <p>Technical responsibilites:</p>
         <ul>
