--- a/main.html
+++ b/main.html
@@ -31,7 +31,9 @@
     </header>
     
     <div id="wrapper" class="row">
+    <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
     <nav class="col-md-4 col-lg-2" id="nav-menu">
+    <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
       <h3><a href="#about" id="link-to-about">About</a></h3>
       <h3><a href="#experience" id="link-to-experience">Experience</a></h3>
