--- a/main.html
+++ b/main.html
@@ -43,12 +43,15 @@
       <h3><a href="#lists" id="link-to-lists">Certificates &amp; courses</a></h3>
       <h3><a href="#hobby" id="link-to-interests">Interests</a></h3>
     </nav>
-    <main class="col-sm-12 col-md-8 col-lg-9" id="main-content">
+    <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
       <div id="about" class="card fluid">
+        <h2 class="section double-padded">About</h2>
+        <div class="section"
       <p>Hi, I'm a guy who develops database software. 
         Somewhere during my mid 20's I got interested in software and decided to give it a go and try database "stuff". 
         Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume</p>
       </div>
+    </div>
       <div id="experience" class="card fluid">
       <h2 class="section double-padded">Experience</h2>
       <div class="section">
