--- a/main.html
+++ b/main.html
@@ -29,7 +29,6 @@
     <div id="doc-wrapper" class="row">
     <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
     <nav class="col-md-4 col-lg-2" id="nav-drawer">
-    <h4>menu</h4>
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
       <h3><a href="#about" id="link-to-about">About</a></h3>
@@ -84,6 +83,23 @@
               <li>Execution of functional, integration and performance test for various applications (mainly Java and Oracle DB based)</li>
             </ul>
             <p>Used tools: SQL Developer, SoapUI, jMeter</p>
+          </div>
+        </div>
+      </div>
+    </div>  
+        
+    <div class="container" style="padding: 0.25rem">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card fluid" style="margin: 0.5rem 0.25rem">
+          <h3 class="doc section">Junior software developer<small>Accenture(2015/11-2016/08)</small></h3>
+            <p>Development, maintenance and testing of projects based on Oracle database and SAS in banking sector.</p>
+            <p>Technical responsibilites:</p>
+            <ul>
+              <li>Development and testing of SAS Customer Intelligence workflows</li>
+              <li>Development and testing of ETL processes on Informatica PC and Oracle database</li>
+            </ul>
+            <p>Used tools: SQL Developer, SAS Customer Intelligence, Informatica PC </p>
           </div>
         </div>
       </div>
