--- a/main.html
+++ b/main.html
@@ -118,7 +118,10 @@
         <h2 class="section double-padded">Skills</h2>
       <div class="section">
         <div class="row">
-          <div class="card small"></div>
+          <div class="card small">
+            <p>PL/SQL & SQL</p>
+          <progress value="70" max="100" class="primary"></progress>
+          </div>
           <div class="card large"></div>
           <div class="col-sm-12">
             <div class="card fluid"></div>
