--- a/main.html
+++ b/main.html
@@ -118,11 +118,18 @@
         <h2 class="section double-padded">Skills</h2>
       <div class="section">
         <div class="row">
-          <div class="card small">
-            <p>PL/SQL & SQL</p>
+          <div class="card large">
+            <p>PL/SQL & SQL - good - 5+ years experience</p>
           <progress value="70" max="100" class="primary"></progress>
           </div>
-          <div class="card large"></div>
+          <div class="card large">
+            <p>Java - basic - occasional development of simple components</p>
+          <progress value="20" max="100" class="primary"></progress>
+          </div>
+          <div class="card large">
+            <p>JavaScript - basic - occasional development of simple components</p>
+          <progress value="10" max="100" class="primary"></progress>
+          </div>
           <div class="col-sm-12">
             <div class="card fluid"></div>
           </div>
