--- a/main.html
+++ b/main.html
@@ -104,7 +104,11 @@
         </div>
       </div>
     </div>  
+    </div>
   
+    <div class="container" style="padding: 0.25rem">
+      <div class="row">
+        <div class="col-sm-12">
     <div id="education" class="card fluid">
         <h2 class="section double-padded">Education</h2>
       <div class="section">
@@ -112,7 +116,7 @@
           <p>2014/09-2015/06 Polish-Japanese Academy of Information Technology. Post graduate: Computer Science - database applications</p>
           <p>2011/09-2013/06 Warsaw School of Economics.  Master degree: Law & Economics</p>
       </div>
-    </div> 
+    </div></div></div>
  
      <div id="education" class="card fluid">
         <h2 class="section double-padded">Skills</h2>
