--- a/main.html
+++ b/main.html
@@ -106,9 +106,7 @@
     </div>  
     </div>
   
-    <div class="container" style="padding: 0.25rem">
-      <div class="row">
-        <div class="col-sm-12">
+
     <div id="education" class="card fluid">
         <h2 class="section double-padded">Education</h2>
       <div class="section">
@@ -116,7 +114,7 @@
           <p>2014/09-2015/06 Polish-Japanese Academy of Information Technology. Post graduate: Computer Science - database applications</p>
           <p>2011/09-2013/06 Warsaw School of Economics.  Master degree: Law & Economics</p>
       </div>
-    </div></div></div>
+    </div>
  
      <div id="education" class="card fluid">
         <h2 class="section double-padded">Skills</h2>
