--- a/main.html
+++ b/main.html
@@ -133,7 +133,12 @@
           <progress value="10" max="100" class="primary"></progress>
           </div>
           <div class="col-sm-12">
-            <div class="card fluid"></div>
+            <div class="card fluid">
+            <label class="button shadowed">Label</label>
+            <label class="button circular">Label</label>
+            <label class="button">Label</label>
+            
+            </div>
           </div>
         </div>
       </div>
