--- a/main.html
+++ b/main.html
@@ -156,7 +156,8 @@
     <div id="education" class="card fluid">
         <h2 class="section double-padded">Certificates</h2>
       <div class="section">
-          <p>jjj</p>
+        <img src="img/OCA_PLSQL_Badge.png" alt="">
+        <img src="img/OCA_SQL_Badge.png" alt="">
 
       </div>
     </div>
