--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
               <li>PL/SQL development (new transactional modules, API, reporting)</li>
               <li>query and process optimization</li>
               <li>integration with other applications via Oracle Service Bus</li>
-              <li>frontend development - Apache server with mod pl/sql (basic html/css + javascript)</li>
+              <li>frontend development - Apache server with mod_plsql (basic html/css + javascript)</li>
               <li>minor Java development</li>
             </ul>
             <p>Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter</p>
@@ -132,6 +132,7 @@
             <p>JavaScript - basic - occasional development of simple components</p>
           <progress value="10" max="100" class="primary"></progress>
           </div>
+          <p>I also worked with SQL Server (some T-SQL), little bit with Perl and Python but don't remember much of it :) </p>
          
         </div>
       </div>
@@ -148,6 +149,7 @@
               <mark class="tag">Eclipse</mark>
               <mark class="tag">SoapUI</mark>
               <mark class="tag">jMeter</mark>
+              <mark class="tag">Informatica PC</mark>
             </p>
           </div>
           </div>
@@ -156,8 +158,8 @@
     <div id="education" class="card fluid">
         <h2 class="section double-padded">Certificates</h2>
       <div class="section">
-        <img style="width: 20%" src="img/OCA_PLSQL_Badge.png" alt="">
-        <img style="width: 20%" src="img/OCA_SQL_Badge.png" alt="">
+        <img style="width: 12%" src="img/OCA_PLSQL_Badge.png" alt="">
+        <img style="width: 12%" src="img/OCA_SQL_Badge.png" alt="">
 
       </div>
     </div>
