--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
       <a href="#experience" id="link-to-experience">Experience</a>
       <a href="#education" id="link-to-education">Education</a>
       <a href="#skills" id="link-to-skills">Skills</a>
-      <a href="#lists" id="link-to-lists">Certificates &amp; courses</a>
+      <a href="#cert" id="link-to-cert">Certificates &amp; courses</a>
       <a href="#hobby" id="link-to-interests">Interests</a>
     </nav>
     <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
@@ -154,7 +154,7 @@
           </div>
       </div>
     </div> 
-    <div id="education" class="card fluid">
+    <div id="cert" class="card fluid">
         <h2 class="section double-padded">Certificates</h2>
       <div class="section">
         <img style="width: 12%" src="img/OCA_PLSQL_Badge.png" alt="">
