--- a/main.html
+++ b/main.html
@@ -19,14 +19,14 @@
 </head>
 <body>
   <div>
-    <header class="row">
+    <header class="row sticky">
       <span class="logo col-sm-3 col-md"><a href="mailto:wisniewski.dominik@protonmail.com">Dominik Wiśniewski</a></span>
       
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
     <div id="doc-wrapper" class="row">
-    <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
-    <nav class="col-md-4 col-lg-2 sticky" id="nav-drawer">
+    <input id="doc-drawer-checkbox" class="drawer sticky" value="on" type="checkbox">
+    <nav class="col-md-4 col-lg-2" id="nav-drawer">
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
       <a href="#about" id="link-to-about">About</a>
