--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-  <div>
+  <div id="root">
     <header class="row sticky">
       <span class="logo col-sm-7 col-md"><a href="mailto:wisniewski.dominik@protonmail.com">Dominik Wiśniewski</a></span>
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
