--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
       <a href="#education" id="link-to-education">Education</a>
       <a href="#skills" id="link-to-skills">Skills</a>
       <a href="#cert" id="link-to-cert">Certificates &amp; courses</a>
-      <a href="#hobby" id="link-to-interests">Interests</a>
+
     </nav>
     <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
       <div id="about" class="card fluid">
@@ -146,6 +146,8 @@
       <div class="section">
         <img style="width: 12%" src="img/OCA_PLSQL_Badge.png" alt="">
         <img style="width: 12%" src="img/OCA_SQL_Badge.png" alt="">
+        <p>Oracle SQL - 18C Performance tuning</p>
+        <p>Oracle PL/SQL - 18C Advanced programming</p>
 
       </div>
     </div>
