--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
       </div>
     </div> 
     <div id="cert" class="card fluid">
-        <h2 class="section double-padded">Certificates</h2>
+        <h2 class="section double-padded">Certificates & courses</h2>
       <div class="section">
         <img style="width: 12%" src="img/OCA_PLSQL_Badge.png" alt="">
         <img style="width: 12%" src="img/OCA_SQL_Badge.png" alt="">
