--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
               <li>PL/SQL development (new transactional modules, API, reporting)</li>
               <li>query and process optimization</li>
               <li>integration with other applications via Oracle Service Bus</li>
-              <li>frontend development - Apache server with mod_plsql (basic html/css + javascript)</li>
+              <li>frontend development - Oracle APEX & Apache server with mod_plsql (basic html/css + javascript)</li>
               <li>minor Java development</li>
             </ul>
             <p>Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter</p>
