--- a/main.html
+++ b/main.html
@@ -20,7 +20,9 @@
 <body>
   <div id="root">
     <header class="row">
-      <span class="logo col-sm-7 col-md"><a href="mailto:wisniewski.dominik@protonmail.com">Dominik Wiśniewski</a></span>
+      <span class="logo col-sm-7 col-md">
+        <span class="icon-mail"></span><a href="mailto:wisniewski.dominik@protonmail.com"> Dominik Wiśniewski</a>
+      </span>
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
     <div id="doc-wrapper" class="row">
@@ -30,9 +32,9 @@
     <!--<img class="circular" src="img/logo.jpg" alt="">-->
       <a href="#about" id="link-to-about">About</a>
       <a href="#experience" id="link-to-experience">Experience</a>
-      <a href="#education" id="link-to-education">Education</a>
       <a href="#skills" id="link-to-skills">Skills</a>
       <a href="#cert" id="link-to-cert">Certificates &amp; courses</a>
+      <a href="#education" id="link-to-education">Education</a>
 
     </nav>
     <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
